--- a/index.html
+++ b/index.html
@@ -1509,6 +1509,34 @@
                     <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-1">
                         <div class="portfoli-card-img">
                             <div class="img-box v2">
+                                <a href="https://coursera.org/share/54633a2532282f2de04c590216166572" target="_blank">
+                                    <img class="img-primary hidden-on-mobile" src="assets/images/latest-portfolio/cer-5.jpg" alt="Blog Thumbnail">
+                                    <img class="img-secondary" src="assets/images/latest-portfolio/cer-5.jpg" alt="BLog Thumbnail">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="portfolio-card-content-wrap">
+                            <div class="content-left">
+                                <h3 class="portfolio-card-title"><a href="https://coursera.org/share/54633a2532282f2de04c590216166572" target="_blank"> Google UX Design </a>
+                                </h3>
+                                <div class="tag-items">
+                                    <ul>
+                                        <li>
+                                            <a href="#" class="tag-item">Coursera</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="tag-item">Online</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="col-lg-6 col-md-6 col-12">
+                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-2">
+                        <div class="portfoli-card-img">
+                            <div class="img-box v2">
                                 <a href="https://coursera.org/share/17ccfccd337afdf7fa944b6528870743" target="_blank">
                                     <img class="img-primary hidden-on-mobile" src="assets/images/latest-portfolio/cer-1.jpg" alt="Blog Thumbnail">
                                     <img class="img-secondary" src="assets/images/latest-portfolio/cer-1.jpg" alt="BLog Thumbnail">
@@ -1534,7 +1562,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-12">
-                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-2">
+                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-3">
                         <div class="portfoli-card-img">
                             <div class="img-box v2">
                                 <a href="https://coursera.org/share/1fe4eea1f325e16411888153fa7d1993" target="_blank">
@@ -1562,7 +1590,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-12">
-                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-3">
+                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-4">
                         <div class="portfoli-card-img">
                             <div class="img-box v2">
                                 <a href="https://coursera.org/share/7199575fb74b528344dedb410bab0984" target="_blank">
@@ -1590,7 +1618,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-12">
-                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-4">
+                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-5">
                         <div class="portfoli-card-img">
                             <div class="img-box v2">
                                 <a href="https://coursera.org/share/1bb4989f705fae381c65ffc42038e663" target="_blank">
@@ -1616,9 +1644,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-6 col-md-6 col-12">
-                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-5">
+                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-6">
                         <div class="portfoli-card-img">
                             <div class="img-box v2">
                                 <a href="https://www.udemy.com/certificate/UC-76c3d113-84ba-487c-96ce-68c22959429f/" target="_blank">
@@ -1646,7 +1674,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-12">
-                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-6">
+                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-7">
                         <div class="portfoli-card-img">
                             <div class="img-box v2">
                                 <a href="https://drive.google.com/file/d/16_VhoBVNEhYWIecKq-TxkebIdt-y0arr/view?usp=sharing" target="_blank">
