--- a/index.html
+++ b/index.html
@@ -1517,7 +1517,7 @@
                         </div>
                         <div class="portfolio-card-content-wrap">
                             <div class="content-left">
-                                <h3 class="portfolio-card-title"><a href="https://coursera.org/share/54633a2532282f2de04c590216166572" target="_blank"> Google UX Design </a>
+                                <h3 class="portfolio-card-title"><a href="https://coursera.org/share/54633a2532282f2de04c590216166572" target="_blank"> Google UX Design Professional Certificate </a>
                                 </h3>
                                 <div class="tag-items">
                                     <ul>
@@ -1646,7 +1646,7 @@
                     </div>
                 </div> -->
                 <div class="col-lg-6 col-md-6 col-12">
-                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-6">
+                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-2">
                         <div class="portfoli-card-img">
                             <div class="img-box v2">
                                 <a href="https://www.udemy.com/certificate/UC-76c3d113-84ba-487c-96ce-68c22959429f/" target="_blank">
@@ -1674,7 +1674,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-12">
-                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-7">
+                    <div class="latest-portfolio-card-style-two tmponhover tmp-scroll-trigger tmp-fade-in animation-order-3">
                         <div class="portfoli-card-img">
                             <div class="img-box v2">
                                 <a href="https://drive.google.com/file/d/16_VhoBVNEhYWIecKq-TxkebIdt-y0arr/view?usp=sharing" target="_blank">
