--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@
                             <li>
                                 <button class="nav-link" id="nav-branding-tab" data-bs-toggle="tab" data-bs-target="#nav-branding" type="button" role="tab" aria-controls="nav-branding" aria-selected="false">Web Design</button>
                             </li>
-                            <!-- <li>
+                            <li>
                                 <button class="nav-link" id="nav-design-tab" data-bs-toggle="tab" data-bs-target="#nav-design" type="button" role="tab" aria-controls="nav-design" aria-selected="false">Case Study</button>
-                            </li> -->
+                            </li>
                             <li>
                                 <button class="nav-link" id="nav-content-writing-tab" data-bs-toggle="tab" data-bs-target="#nav-content-writing" type="button" role="tab" aria-controls="nav-content-writing" aria-selected="false">Poster Design</button>
                             </li>
@@ -720,6 +720,40 @@
                                     <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-1">
                                         <div class="portfoli-card-img">
                                             <div class="img-box v2">
+                                                <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/gallery/226295349/Women-Safety-SOS-Case-Study" target="_blank">
+                                                    <img class="w-100" src="assets/images/latest-portfolio/case-1.jpg" alt="Thumbnail">
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="portfolio-card-content-wrap">
+                                            <div class="content-left">
+                                                <h3 class="portfolio-card-title"><a href="https://www.behance.net/gallery/226295349/Women-Safety-SOS-Case-Study" target="_blank">Women Safety SOS
+                                                        Casestudy</a></h3>
+                                                <div class="tag-items">
+                                                    <ul>
+                                                        <li>
+                                                            <a href="#" class="tag-item">Figma</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#" class="tag-item">Casestudy</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                            <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/gallery/226295349/Women-Safety-SOS-Case-Study" target="_blank">
+                                                <span class="icon-reverse-wrapper">
+                                        <span class="btn-text">View design</span>
+                                                <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
+                                                <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
+                                                </span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                 <div class="col-lg-6">
+                                    <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-2">
+                                        <div class="portfoli-card-img">
+                                            <div class="img-box v2">
                                                 <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/harshankrishdev" target="_blank">
                                                     <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-1.jpg" alt="Thumbnail">
                                                 </a>
@@ -736,40 +770,6 @@
                                                         </li>
                                                         <li>
                                                             <a href="#" class="tag-item">CaseStudy</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                            <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/harshankrishdev" target="_blank">
-                                                <span class="icon-reverse-wrapper">
-                                        <span class="btn-text">View design</span>
-                                                <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                                                <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                                                </span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-2">
-                                        <div class="portfoli-card-img">
-                                            <div class="img-box v2">
-                                                <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/harshankrishdev" target="_blank">
-                                                    <img class="w-100" src="assets/images/latest-portfolio/mob-img-2.jpg" alt="Thumbnail">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="portfolio-card-content-wrap">
-                                            <div class="content-left">
-                                                <h3 class="portfolio-card-title"><a href="https://www.behance.net/harshankrishdev" target="_blank">Women Safety SOS
-                                                        Casestudy</a></h3>
-                                                <div class="tag-items">
-                                                    <ul>
-                                                        <li>
-                                                            <a href="#" class="tag-item">Figma</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#" class="tag-item">Casestudy</a>
                                                         </li>
                                                     </ul>
                                                 </div>
