--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                             </div>
 
                         </div>
-                        <div class="about-btn mt--40 tmp-scroll-trigger tmp-fade-in animation-order-6">
+                        <!-- <div class="about-btn mt--40 tmp-scroll-trigger tmp-fade-in animation-order-6">
                             <a class="tmp-btn hover-icon-reverse radius-round" href="https://drive.google.com/file/d/12iuEjuUXl5DV072XgEG1vRh0F83PL5of/view?usp=sharing" target="_blank">
                                 <span class="icon-reverse-wrapper">
                         <span class="btn-text">Download CV</span>
@@ -367,7 +367,7 @@
                                 <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
                                 </span>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
