--- a/index.html
+++ b/index.html
@@ -1234,24 +1234,24 @@
                     </div>
 
                     <div class="resume-widget">
-                        <div class="resume-single tmp-scroll-trigger tmp-fade-in animation-order-1">
+                        <!-- <div class="resume-single tmp-scroll-trigger tmp-fade-in animation-order-1">
                             <div class="time"><i class="fa-duotone fa-solid fa-circle-dot fa-fade mr--15"></i> Feb 2025 -
                                 Present</div>
                             <h3 class="resume-title">UI/UX & Visual Designer</h3>
                             <div class="institute">RGB Creation (Freelancer)</div>
-                        </div>
+                        </div> -->
                         <div class="resume-single tmp-scroll-trigger tmp-fade-in animation-order-2">
-                            <div class="time"><i class="fa-duotone fa-solid fa-circle-dot fa-fade mr--15"></i> Feb 2024 -
+                            <div class="time"><i class="fa-duotone fa-solid fa-circle-dot fa-fade mr--15"></i> July 2023 -
                                 Mar 2025</div>
                             <h3 class="resume-title">UI/UX & Visual Designer</h3>
                             <div class="institute">Ultrapro Blockchain Tech Pvt Ltd, Madurai</div>
                         </div>
-                        <div class="resume-single tmp-scroll-trigger tmp-fade-in animation-order-3">
+                        <!-- <div class="resume-single tmp-scroll-trigger tmp-fade-in animation-order-3">
                             <div class="time"><i class="fa-duotone fa-solid fa-circle-dot fa-fade mr--15"></i> July 2023 -
                                 Dec 2023</div>
                             <h3 class="resume-title">Graphic & UI Designer</h3>
                             <div class="institute">Freelancer</div>
-                        </div>
+                        </div> -->
                         <div class="resume-single mb--0 tmp-scroll-trigger tmp-fade-in animation-order-4">
                             <div class="time"><i class="fa-duotone fa-solid fa-circle-dot fa-fade mr--15"></i> Jan 2021 -
                                 June 2022</div>
@@ -1279,7 +1279,7 @@
                             <h3 class="resume-title">Computer Science and Engineering</h3>
                             <div class="institute">K.L.N College of Engineering</div>
                         </div>
-                        <div class="resume-single tmp-scroll-trigger tmp-fade-in animation-order-3">
+                        <!-- <div class="resume-single tmp-scroll-trigger tmp-fade-in animation-order-3">
                             <div class="time"><i class="fa-duotone fa-solid fa-circle-dot fa-fade mr--15"></i> June 2016 -
                                 Apr 2017</div>
                             <h3 class="resume-title">HSC - Computer Science</h3>
@@ -1290,7 +1290,7 @@
                                 Mar 2015</div>
                             <h3 class="resume-title">SSLC</h3>
                             <div class="institute">Tagore Vidyalaya Matriculation School</div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
